# zephyr-optee-client

./: CMakeLists.txt  Kconfig
libckteec/: CMakeLists.txt
libteec/: CMakeLists.txt
libteec/include/: tee.h
libteec/src/: tee_client_api.c  test_tee.c
optee-shell-cmd/: CMakeLists.txt
optee-shell-cmd/src/: teec_cmds.c
public/: tee_client_api.h
tee_supplicant/src/: ree_fs.c  tee_supplicant.c
